--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-body{
+.body{
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -48,3 +48,26 @@ body{
     color: #404BBF;
 }
 
+.hero{
+    background-color: #2E2F42;
+    padding: 188px 0;
+    text-align: center;
+}
+.hero-title{
+    font-size: 56px;
+    line-height: 1.07;
+    color: #FFFFFF;
+    margin-bottom: 48px;
+}
+.hero-button{
+    font-weight: 500;
+    font-size: 16px;
+  line-height: 1.5;
+  color: #FFFFFF;
+  background-color: #4D5AE5;
+  border:none;
+  cursor: pointer;
+}
+.hero-button:hover, .hero-button:focus{
+    background-color: #404BBF;
+}
