--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,16 +10,17 @@
 .header{
     background-color: #ffffff;
 }
-.logo{
+.logo-header{
     font-family: "Raleway" sans-serif;
     font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color:#4d5ae5;
     text-decoration: uppercase;
 }
-.logo-web{
-    color:#4D5AE5;
-}
 .logo-studio{
-    color: #2E2F42;
+    color: #2e2f42;
 }
 .nav-list{
     font-family: "Roboto", sans-serif;
@@ -27,18 +28,21 @@
     font-size:16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#2E2F42;
+    color:#2e2f42;
 }
 .nav-link{
     text-decoration: none;
     cursor: pointer;
 }
 .nav-link:hover, .nav-link:focus{
-    color:#4D5AE5
+    color:#404bbf;
 }
 .contacts{
     font-size: 16px;
     line-height: 1.5;
+    font-style:normal;
+    color:#434455;
+    letter-spacing: 0.02em;
 }
 .contact-link{
     text-decoration: none;
@@ -51,6 +55,7 @@
     background-color: #2E2F42;
     padding: 188px 0;
     text-align: center;
+    letter-spacing: 0.02em;
 }
 .hero-title{
     font-size: 56px;
@@ -59,6 +64,8 @@
     margin-bottom: 48px;
 }
 .hero-button{
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.04em;
     font-weight: 500;
     font-size: 16px;
   line-height: 1.5;
@@ -76,6 +83,7 @@
     color: #2E2F42;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .advantages-text{
     font-family: "Roboto", sans-serif;
@@ -83,27 +91,37 @@
     color:#434455;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .our-team{
     font-family: "Roboto", sans-serif;
+    background-color: #F4F4FD;
+}
+.our-team-list{
+    color:#FFFFFF;
 }
 .our-team-title{
     font-weight: 700;
     color:#2E2F42;
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 .our-team-name{
     font-weight: 500;
     color:#2E2F42;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .our-team-role{
     font-weight: 400;
     color:#434455;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .portfolio{
      font-family: "Roboto", sans-serif;
@@ -112,19 +130,24 @@
     font-weight: 700;
     color:#2E2F42;
     font-size:36px;
-    line-height: 1.1;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 .portfolio-subtitle{
     font-weight: 500;
     color:#2E2F42;
     font-size:20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 .portfolio-text{
     font-weight: 400;
     color:#434455;
     font-size:16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .footer{
     background-color: #2E2F42;
@@ -135,7 +158,18 @@
     color:#F4F4FD;
     font-size:16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
-.logo-footer .logo-studio{
-    color:#F4F4FD;
+.logo-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color:#4d5ae5
 }
+.logo-studio-footer{
+    color:#f4f4fd;
+}
+    
