--- a/CSS/styles.css.css
+++ b/CSS/styles.css.css
@@ -11,13 +11,13 @@
     background-color: #ffffff;
 }
 .logo-header{
-    font-family: "Raleway" sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     color:#4d5ae5;
-    text-decoration: uppercase;
+    text-transform: uppercase;
 }
 .logo-studio{
     color: #2e2f42;
@@ -28,7 +28,7 @@
     font-size:16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#2e2f42;
+    color:#434455;
 }
 .nav-link{
     text-decoration: none;
@@ -62,6 +62,7 @@
     line-height: 1.07;
     color: #FFFFFF;
     margin-bottom: 48px;
+    letter-spacing: 0.02em;
 }
 .hero-button{
     font-family: "Roboto", sans-serif;
@@ -98,7 +99,7 @@
     background-color: #F4F4FD;
 }
 .our-team-list{
-    color:#FFFFFF;
+    background-color:#FFFFFF;
 }
 .our-team-title{
     font-weight: 700;
