--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
 
 .body{
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: normal;
   color:#434455;
   background-color: #ffffff;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    text-decoration: none;
 }
 .header{
     background-color: #ffffff;
